Re-escrita justificación, objetivos y alcances

--- a/anteproyecto.bib
+++ b/anteproyecto.bib
@@ -130,6 +130,24 @@
 	keywords = {Computer intrusion detection systems, measurement methodology, metrics, workload generation},
 }
 
+@inproceedings{Fischer:2012:RVA:2245276.2245432,
+	author = {Fischer, Fabian and Mansmann, Florian and Keim, Daniel A.},
+	title = {Real-time Visual Analytics for Event Data Streams},
+	booktitle = {Proceedings of the 27th Annual ACM Symposium on Applied Computing},
+	series = {SAC '12},
+	year = {2012},
+	isbn = {978-1-4503-0857-1},
+	location = {Trento, Italy},
+	pages = {801--806},
+	numpages = {6},
+	url = {http://doi.acm.org/10.1145/2245276.2245432},
+	doi = {10.1145/2245276.2245432},
+	acmid = {2245432},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {data streams, event processing, event streams, real-time, visual analytics, visualization},
+} 
+
 @book{Tanenbaum:2002:CN:572404,
 	author = {Tanenbaum, Andrew},
 	title = {Computer Networks},
