--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -33,14 +33,15 @@
 	\vspace{2cm}
 	{\Large\itshape Pineda Leandro\par}
 	\vfill
-	dirigido por\par
+	dirigido por Ing. Miguel Angel Robledo\par
+	codirigido por Ing. Gabriel Filippa
 	
 
 	\vfill
 	
-	%Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
+	Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
 	
-	%\vfill
+	\vfill
 	
 	% Bottom of the page
 	\large Santa Fe\par
@@ -51,10 +52,10 @@
 \modulolinenumbers[5]
 %\linenumbers
 
-\input{resumen}
+%\input{resumen}
 \input{justificacion}
-\input{metodologia}
-\input{riesgos}
+%\input{metodologia}
+%\input{riesgos}
 \newpage
  
 \nocite{*}
