Re-escrita metodología, plan de tareas y diagrama de gantt

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -9,6 +9,9 @@
 %\usepackage{showframe}
 \usepackage[a4paper]{geometry}
 \usepackage{caption}
+\usepackage{pgfgantt}
+\usepackage{lscape} 
+
 
 \bibliography{anteproyecto}
 
@@ -54,7 +57,7 @@
 
 %\input{resumen}
 \input{justificacion}
-%\input{metodologia}
+\input{metodologia}
 %\input{riesgos}
 \newpage
  
